added image to blog3

--- a/www/df/df_ch2.Rmd
+++ b/www/df/df_ch2.Rmd
@@ -8,6 +8,8 @@ Each week I spend the better part of a morning reading and taking notes on a cha
 
 Occasionally I can pull off exactly what I want to say by Sunday at midnight.  Though most of the time I think my ruminations on the social inequity don’t do the topic justice.  I’m afraid to voice my half-formed thoughts.  
 
+![](images_df/mind.png)
+
 This is dangerous.  Playing with ideas that don’t yet make sense is the only way to truly learn about them.  Instead, I pull away from engaging entirely because I’m petrified of covering racial injustice non- holistically (do I know any writers who cover all facets of racial discrimination?).  
 
 As a writing tutor, I help students like me overcome writing anxiety on a weekly basis.  What’s the deal with me?  Why can’t I help myself?  
