--- a/docs/df/df_home.Rmd
+++ b/docs/df/df_home.Rmd
@@ -8,4 +8,6 @@ title: "My thouhgts while reading Data Feminism"
 
 [Chapter 2: Collect, Analyze, Imagine, Teach](df_ch2.html)
 
-Chapter 3: On Rational, Scientific, Objective Viewpoints from Mythical, Imaginary, Impossible Standpoints (coming soon)
+[Chapter 3: On Rational, Scientific, Objective Viewpoints from Mythical, Imaginary, Impossible Standpoints](df_ch3.html)
+
+[Chapter 4: What Gets Counted Counts](df_ch4.html)
