--- a/www/index.Rmd
+++ b/www/index.Rmd
@@ -1,19 +1,9 @@
 ---
-title: "My website"
+title: "Big Data and Big Emotions"
 output:
   html_document:
     toc: false
 ---
 
-Write stuff in Markdown here. Like **bold** things and *italic* things. 
 
-And images:
-
-![](https://media.giphy.com/media/1hqYk0leUMddBBkAM7/giphy.gif)
-
-And don't forget about R code:
-
-```{r}
-knitr::kable(mtcars)
-```
-
+This is an outlet for my thoughts.  It's everything ranging from data analysis on the vaccine hesitency movement to things I talk about during in therapy.  
